--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ Databases/v1-18720_Faulty
 Assets\StreamingAssets\models\pose\body_25\pose_iter_584000.caffemodel
 Assets\StreamingAssets\models\pose\body_25\pose_iter_440000.caffemodel
 Assets\StreamingAssets\models\pose\body_25\pose_iter_160000.caffemodel
-
 Assets\StreamingAssets\models\hand\pose_iter_102000.caffemodel
 Assets\StreamingAssets\models\face\pose_iter_116000.caffemodel
+Assets\StreamingAssets\models\pose\coco\pose_iter_440000.caffemodel
+Assets\StreamingAssets\models\pose\mpi\pose_iter_160000.caffemodel
