--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ Assets/StreamingAssets/models/hand/pose_iter_102000.caffemodel
 Assets/StreamingAssets/models/face/pose_iter_116000.caffemodel
 Assets/StreamingAssets/models/pose/coco/pose_iter_440000.caffemodel
 Assets/StreamingAssets/models/pose/mpi/pose_iter_160000.caffemodel
+
+
+
+#Ignore Input Files.. may be large files
+Input-Files/
+
