--- a/.gitignore
+++ b/.gitignore
@@ -62,4 +62,4 @@ Assets/StreamingAssets/models/pose/mpi/pose_iter_160000.caffemodel
 
 #Ignore Input Files.. may be large files
 Input-Files/
-
+Paper/
