--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ Assets/StreamingAssets/models/pose/mpi/pose_iter_160000.caffemodel
 Input-Files/
 Paper/
 Matlab/Not-In-Git
+Assets/ArticulatedMotionResults
