--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,6 @@ sysinfo.txt
 #OpenPose - models - BIG FILES - CAN NOT BE UPLOADED!
 Assets/StreamingAssets/models/
 Assets/OpenPose/Plugins/
+Scenarios/
 
 
